# gift-2.0

./: .env_example  .gitignore  Anchor.toml  Cargo.toml  README.md  filestructure.md  full system.txt  hardhat.config.js  hardhat.config.ts  how Gift gold cross-chain works.md  package-lock.json  package.json  tsconfig.json
.openzeppelin/: polygon-mumbai.json
addresses/: addresses.mainnet.json
apps/solana-ops-console/: next.config.mjs  package-lock.json  package.json  tsconfig.json
contracts/: Access.sol  ERC20Pausable.sol  ERC20Snapshot.sol  IAccess.sol
contracts/polygon/: GIFT.sol  GIFTBarNFTDeferred.sol  GIFTTaxManager.sol  GiftPolygonBridge.sol  GiftRedemptionEscrowUpgradeable.sol  MintingUpgradeable.sol  README.md  foundry.toml  remappings.txt
contracts/por/: IReserveConsumerV3.sol  ReserveConsumerV3.sol
contracts/token/: GIFT.sol
docs/: complete-polygon-tests-for-gift-token.md  complete-solana-tests-for-gift-bridge.md
docs/architecture/: redemption-flows.md
idl/: gift_bridge_solana.json
old/: README.md  package-lock.json  package.json  truffle-config.js
programs/gift_bridge_solana/: Anchor.toml  Cargo.toml
programs/gift_bridge_solana/src/: lib.rs
script/verify/: verify-new-core.sh
scripts/: README.md  deploy.js  update.js
scripts/polygon/: configureSystem.ts  deployNFT.ts  (+4 more)
src/: GIFTBarNFTDeferred.sol  GIFTBatchRegistry.sol  GIFTPoR.sol  GIFTTaxManager.sol  Gift.sol  IReserveConsumerV3.sol  MintingUpgradeable.sol  ReserveConsumerV3.sol  giftwitholdfunctions.sol
test/: gift.js  gift_zero_consumer_init_supply.js
utils/: blockWaiter.js
(+120 files in other folders)
