[package]
name = "gift_bridge_solana"
version = "0.1.0"
description = "Gift bridge program (Solana side) - scaffold"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "gift_bridge_solana"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.0"
anchor-spl = "0.31.0"

[profile.release]
overflow-checks = true


